<resources>
    <string name="app_name">TODO App</string>
    <string name="action_settings">Settings</string>
    <string name="version_name">App Version %s</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="no_internet_connection_msg">Sorry, No Internet connection detected. Please reconnect and try again.</string>
    <string name="failed_con_server">Failed to connect to server.</string>
    <string name="server_error">Something went wrong please try again later</string>


    <string name="no_data">Task Not Available</string>


    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name:</string>
    <string name="task_details">Task Details:</string>
    <string name="task_created_at">Task Created At:</string>
    <string name="task_submit">Submit</string>
    <string name="task_clear">Clear</string>
    <string name="your_task">Task List</string>
</resources>
